--- a/meta/main.yml
+++ b/meta/main.yml
@@ -130,7 +130,8 @@ galaxy_info:
   #- system
   #- web
 dependencies:
-  - geerlingguy.jenkins
+  - role: geerlingguy.jenkins
+    sudo: yes
   # List your role dependencies here, one per line. Only
   # dependencies available via galaxy should be listed here.
   # Be sure to remove the '[]' above if you add dependencies
