--- a/test/Vagrantfile
+++ b/test/Vagrantfile
@@ -14,6 +14,9 @@ Vagrant.configure(2) do |config|
     sudo apt-get install -y python-setuptools python-dev libffi-dev libssl-dev
     sudo easy_install pip
 
+    # Install git
+    sudo apt-get install git
+
     # Fix InsecurePlatformWarning in the OS's pip (this will show the
     # InsecurePlatformWarning once)
     sudo -H pip install --upgrade requests[security]
@@ -38,6 +41,7 @@ Vagrant.configure(2) do |config|
     # Start new login shells in the /solita.jenkins/test directory
     echo 'cd /solita.jenkins/test' >> ~/.profile
 
+    # Install role dependencies
     cd /solita.jenkins/test
     bash install-dependencies.sh
   EOF
