--- a/meta/main.yml
+++ b/meta/main.yml
@@ -130,7 +130,8 @@ galaxy_info:
   #- system
   #- web
 dependencies:
-  - role: https://github.com/noidi/ansible-role-jenkins.git,1.2.5-solita-patch1,geerlingguy.jenkins
+  - role: geerlingguy.jenkins
+    version: 1.2.6
     sudo: yes
   # List your role dependencies here, one per line. Only
   # dependencies available via galaxy should be listed here.
