--- a/meta/main.yml
+++ b/meta/main.yml
@@ -132,7 +132,8 @@ galaxy_info:
 dependencies:
   - role: geerlingguy.jenkins
     version: 1.2.6
-    sudo: yes
+    become: yes
+    become_user: root
   # List your role dependencies here, one per line. Only
   # dependencies available via galaxy should be listed here.
   # Be sure to remove the '[]' above if you add dependencies
