Test user addition and removal

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,12 +4,12 @@
 
 - name: Configure Jenkins security realm
   tags: solita_jenkins_security
-  solita_jenkins_security_realm: realm={{ solita_jenkins_security_realm }} admin_password={{ lookup('password', inventory_dir + '/default_passwords/solita_jenkins') }}
+  solita_jenkins_security_realm: realm={{ solita_jenkins_security_realm }} admin_password={{ lookup('password', inventory_dir + '/solita_jenkins_default_password/solita_jenkins') }}
   when: solita_jenkins_security_realm is defined
 
 - name: Add present Jenkins users
   tags: solita_jenkins_security
-  solita_jenkins_user: name={{ item }} password={{ lookup('password', inventory_dir + '/default_passwords/' + item) }} state=present
+  solita_jenkins_user: name={{ item }} password={{ lookup('password', inventory_dir + '/solita_jenkins_default_password/' + item) }} state=present
   with_items: "{{ solita_jenkins_users }}"
   when: (solita_jenkins_security_realm | default(None)) == 'jenkins'
 
