--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -66,7 +66,7 @@
     src: "{{ item }}"
     dest: /var/lib/jenkins/jobs/job-dsl/workspace
   with_fileglob:
-    - "{{ playbook_dir }}/job-dsl/*.groovy"
+    - "{{ playbook_dir }}/jobs/*.groovy"
   register: update_job_dsl_scripts_old
 
 - name: Update the Job DSL scripts (new workspace location)
@@ -77,7 +77,7 @@
     src: "{{ item }}"
     dest: /var/lib/jenkins/workspace/job-dsl
   with_fileglob:
-    - "{{ playbook_dir }}/job-dsl/*.groovy"
+    - "{{ playbook_dir }}/jobs/*.groovy"
   register: update_job_dsl_scripts_new
 
 - name: Run the Job DSL scripts
