--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,3 +2,4 @@
 solita_jenkins_plugins: []
 solita_jenkins_users: []
 solita_jenkins_absent_users: []
+solita_jenkins_jobs_dir: "{{ playbook_dir }}/jobs/"
