--- a/test/Vagrantfile
+++ b/test/Vagrantfile
@@ -7,6 +7,10 @@ Vagrant.configure(2) do |config|
   config.vm.synced_folder "..", "/solita.jenkins"
   config.vm.network :forwarded_port, guest: 8080, host: 9080
 
+  config.vm.provider 'virtualbox' do |v|
+    v.memory = 1024
+  end
+
   config.vm.provision 'shell', privileged: false, inline: <<-EOF
     set -e
 
