--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,10 @@
 ---
+- include: setup-RedHat.yml
+  when: ansible_os_family == 'RedHat'
+
+- include: setup-Debian.yml
+  when: ansible_os_family == 'Debian'
+
 # Force Jenkins restart, if one is pending after e.g. plugin installation.
 - meta: flush_handlers
 
@@ -15,29 +21,6 @@
 
 - name: Create an SSH key for the Unix user
   user: name={{ ansible_user_id }} generate_ssh_key=yes
-
-- name: Configure Jenkins security realm
-  solita_jenkins_security_realm: realm={{ solita_jenkins_security_realm }} admin_password={{ lookup('password', inventory_dir + '/solita_jenkins_default_password/solita_jenkins') }}
-  when: solita_jenkins_security_realm is defined
-  tags: solita_jenkins_security
-
-- name: Check that user variables are only used with solita_jenkins_security_realm='jenkins'
-  fail: msg="User variables are only allowed with solita_jenkins_security_realm='jenkins'"
-  when: ({{ item }} | length > 0) and ((solita_jenkins_security_realm | default(None)) != 'jenkins')
-  with_items:
-    - solita_jenkins_users
-    - solita_jenkins_absent_users
-  tags: solita_jenkins_security
-
-- name: Add present Jenkins users
-  solita_jenkins_user: name={{ item }} password={{ lookup('password', inventory_dir + '/solita_jenkins_default_password/' + item) }} state=present
-  with_items: "{{ solita_jenkins_users }}"
-  tags: solita_jenkins_security
-
-- name: Remove absent Jenkins users
-  solita_jenkins_user: name={{ item }} state=absent
-  with_items: "{{ solita_jenkins_absent_users }}"
-  tags: solita_jenkins_security
 
 - name: copy job-dsl-config.xml to destination
   become: yes
@@ -64,3 +47,6 @@
 
 - include: jobs.yml
   tags: solita_jenkins_jobs
+
+- include: security.yml
+  tags: solita_jenkins_security
