--- a/test/Vagrantfile
+++ b/test/Vagrantfile
@@ -16,10 +16,10 @@ Vagrant.configure(2) do |config|
 
     # Install Ansible
     sudo apt-get update
-    sudo apt-get install -y python-setuptools python-dev libffi-dev libssl-dev
-    sudo easy_install -U pip
-    sudo pip install -U setuptools
-    sudo pip install ansible==2.0.2.0
+    sudo apt-get install -y python-setuptools python-dev libffi-dev libssl-dev git
+    sudo -H easy_install -U pip
+    sudo -H pip install -U setuptools
+    sudo -H pip install ansible==2.1.0.0
 
     # Start new login shells in the /solita.jenkins/test directory
     echo 'cd /solita.jenkins/test' >> ~/.profile
