--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,3 +3,5 @@ solita_jenkins_plugins: []
 solita_jenkins_users: []
 solita_jenkins_absent_users: []
 solita_jenkins_jobs_dir: "{{ playbook_dir }}/jobs"
+solita_jenkins_security_realm: jenkins
+solita_jenkins_jnlp_port: 0
