--- a/tasks/jobs.yml
+++ b/tasks/jobs.yml
@@ -82,5 +82,5 @@
   register: remove_old_scripts
 
 - name: Run the Job DSL scripts
-  shell: java -jar {{ jenkins_jar_location }} -s http://{{ jenkins_hostname }}:{{ jenkins_http_port }}/ build job-dsl -s -v
+  shell: "java -jar {{ jenkins_jar_location }} -s '{{ solita_jenkins_url }}/' build job-dsl -s -v"
   when: ((scripts | length > 0) or (templates | length > 0)) and ((copy_scripts | changed) or (copy_templates | changed) or (remove_old_scripts | changed))
