--- a/tasks/restart.yml
+++ b/tasks/restart.yml
@@ -5,7 +5,7 @@
 
 # Stolen from geerlingguy.jenkins.
 - name: Wait for Jenkins to start up before proceeding.
-  shell: "curl -D - --silent http://{{ jenkins_hostname }}:{{ jenkins_http_port }}{{ jenkins_url_prefix }}/cli/"
+  shell: "curl -D - --silent {{ solita_jenkins_url }}/cli/"
   args:
     warn: no
   register: result
