--- a/tasks/security.yml
+++ b/tasks/security.yml
@@ -67,9 +67,15 @@
     - solita_jenkins_absent_users
 
 - name: Add present Jenkins users
-  solita_jenkins_user: name={{ item }} password={{ lookup('password', inventory_dir + '/solita_jenkins_default_password/' + item) }} state=present
+  solita_jenkins_user:
+    jenkins_url: "{{ solita_jenkins_url }}"
+    name: "{{ item }}"
+    password: "{{ lookup('password', inventory_dir + '/solita_jenkins_default_password/' + item) }}"
   with_items: "{{ solita_jenkins_users }}"
 
 - name: Remove absent Jenkins users
-  solita_jenkins_user: name={{ item }} state=absent
+  solita_jenkins_user:
+    jenkins_url: "{{ solita_jenkins_url }}"
+    name: "{{ item }}"
+    state: absent
   with_items: "{{ solita_jenkins_absent_users }}"
