--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,22 +7,24 @@
 - include: plugins.yml
 
 - name: copy job-dsl-config.xml to destination
-  become: yes
-  become_user: jenkins
-  copy: src={{ role_path }}/files/job-dsl-config.xml dest=/var/lib/jenkins/job-dsl-config.xml
+  copy:
+    src: "{{ role_path }}/files/job-dsl-config.xml"
+    dest: /var/lib/jenkins/job-dsl-config.xml
+    owner: jenkins
+    group: jenkins
 
 - name: Create the job-dsl job
-  shell: java -jar {{ jenkins_jar_location }} -s '{{ solita_jenkins_url }}' create-job job-dsl < '/var/lib/jenkins/job-dsl-config.xml'
+  shell: java -jar '{{ jenkins_jar_location }}' -s '{{ solita_jenkins_url }}' create-job job-dsl <'/var/lib/jenkins/job-dsl-config.xml'
   args:
     creates: /var/lib/jenkins/jobs/job-dsl/config.xml
   register: create_job_dsl_job
 
 - name: Update the job-dsl job configuration
-  become: yes
-  become_user: jenkins
   copy:
     src: job-dsl-config.xml
     dest: /var/lib/jenkins/jobs/job-dsl/config.xml
+    owner: jenkins
+    group: jenkins
   register: update_job_dsl_job
 
 - name: Reload the job-dsl job
